Fix alignment of form elements

--- a/tjhsst/static/forms.css
+++ b/tjhsst/static/forms.css
@@ -1,10 +1,15 @@
 div.tbl-cell{
-    padding-top:5px;
+    padding-bottom:5px;
 }
 
 span.tbl-cell{
     padding-right:5px;
+    padding-top: 3px;
     vertical-align:top;
+}
+
+label {
+    margin-bottom: 0;
 }
 
 .return-button, .return-button:hover{
